Fixed navbar on mobile

--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -4,7 +4,7 @@
   margin: auto 0;
   position: fixed;
   right: 0;
-  top: 37%;
+  top: 36.5%;
 }
 
 .NavBar-list {
